@@ -20,6 +20,7 @@ requests from users, including:
   David Collins
   Anthony Damico
   Wade Davis
+  Neil Diamond
   Michael Donohue
   Rex Dwyer
   Melanie Edwards
