@@ -55,6 +55,8 @@
 
 	Fixed bug in postStratify.svyrep.design, was reweighting all reps the same (Steven Johnston)
 
+	Fix date for Thomas & Rao (1987) (Neil Diamond)
+
 
 4.0	Some (and eventually nearly all) functions now return influence functions when
 	called with a survey.design2 object and the influence=TRUE option.  These allow
